--- a/clashRulesZxl.ini
+++ b/clashRulesZxl.ini
@@ -1,6 +1,10 @@
+######################################
+;20230120 基于 ACL4SSR_Online_Full_AdblockPlus 自定义
+# https://github.com/ACL4SSR/ACL4SSR/blob/master/Clash/config/ACL4SSR_Online_Full_AdblockPlus.ini
 [custom]
 ;不要随意改变关键字，否则会导致出错
 ;acl4SSR规则
+######################################
 
 ;去广告：支持
 ;自动测速：支持
