--- a/20230127LinghunClashRules.ini
+++ b/20230127LinghunClashRules.ini
@@ -48,7 +48,7 @@ ruleset=Jms 卷毛鼠,https://raw.githubusercontent.com/zhengxl-a/ClashRules/mai
 
 ruleset=CN📺 国内媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
 ruleset=🌍📺 国外媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
-ruleset=🌏 地区选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
+ruleset=🌏 地区GFW选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
 ;ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
@@ -74,38 +74,10 @@ ruleset=🐟 漏网之鱼,[]FINAL
 
 custom_proxy_group=📹 油管视频`select`(港|新加坡)`[]👆 手动选择
 
-custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
-
-custom_proxy_group=🌏 地区选择`select`[]🇭🇰 深港+香港`[]🇭🇰 香港`[]🇸🇬 狮城`[]🇨🇳 台湾`[🇯🇵 日本`[]🇺🇲 美国`[]♻️ 自动选择`[]🔯 故障转移`[]🔮 负载均衡`[]👆 手动选择`[]DIRECT
 custom_proxy_group=👆 手动选择`select`.*
 
-custom_proxy_group=🔯 故障转移`fallback`.*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🔮 负载均衡`load-balance`.*`http://www.gstatic.com/generate_204`300,,50
-
-custom_proxy_group=bitwarden`select`[]🌏 地区选择`[]♻️ 自动选择`[]🔯 故障转移`[]🔮 负载均衡`[]👆 手动选择`[]DIRECT
-custom_proxy_group=proton`select`[]🌏 地区选择`[]♻️ 自动选择`[]🔯 故障转移`[]🔮 负载均衡`[]👆 手动选择`[]DIRECT
-custom_proxy_group=Spotify`select`[]🇭🇰 深港+香港`[]🇭🇰 香港`[]🇸🇬 狮城`[]🇨🇳 台湾`[🇯🇵 日本`[]🇺🇲 美国`[]♻️ 自动选择`[]🔯 故障转移`[]🔮 负载均衡`[]👆 手动选择`[]DIRECT
-custom_proxy_group=Instagram`select`[]🇭🇰 深港+香港`[]🇭🇰 香港`[]🇸🇬 狮城`[]🇨🇳 台湾`[🇯🇵 日本`[]🇺🇲 美国`[]♻️ 自动选择`[]🔯 故障转移`[]🔮 负载均衡`[]👆 手动选择`[]DIRECT
-custom_proxy_group=Emby 终点站`select`[]🇭🇰 深港+香港`[]🇭🇰 香港`[]🇸🇬 狮城`[]🇨🇳 台湾`[🇯🇵 日本`[]🇺🇲 美国`[]♻️ 自动选择`[]🔯 故障转移`[]🔮 负载均衡`[]👆 手动选择`[]DIRECT
-custom_proxy_group=Jms 卷毛鼠`select`[]🇭🇰 深港+香港`[]🇭🇰 香港`[]🇸🇬 狮城`[]🇨🇳 台湾`[🇯🇵 日本`[]🇺🇲 美国`[]♻️ 自动选择`[]🔯 故障转移`[]🔮 负载均衡`[]👆 手动选择`[]DIRECT
-
-custom_proxy_group=📲 电报消息`select`[]🌏 地区选择`[]♻️ 自动选择`[]👆 手动选择`[]DIRECT
-custom_proxy_group=🌍📺 国外媒体`select`[]🌏 地区选择`[]♻️ 自动选择`[]👆 手动选择`[]DIRECT
-custom_proxy_group=CN📺 国内媒体`select`[]DIRECT`[]👆 手动选择
-custom_proxy_group=📢 谷歌FCM`select`[]DIRECT`[]🌏 地区选择`[]👆 手动选择
-custom_proxy_group=Ⓜ️ 微软云盘`select`[]DIRECT`[]🌏 地区选择`[]👆 手动选择
-custom_proxy_group=Ⓜ️ 微软服务`select`[]DIRECT`[]🌏 地区选择`[]👆 手动选择
-custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🌏 地区选择`[]👆 手动选择
-custom_proxy_group=🎮 游戏平台`select`[]DIRECT`[]🌏 地区选择`[]👆 手动选择
-custom_proxy_group=🎶 网易音乐`select`[]DIRECT`[]🌏 地区选择`[]♻️ 自动选择`(网易|音乐|解锁|Music|NetEase)
-custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🌏 地区选择`[]♻️ 自动选择
-
-custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
-custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
-custom_proxy_group=🆎 AdBlock`select`[]REJECT`[]DIRECT
-custom_proxy_group=🛡️ 隐私防护`select`[]REJECT`[]DIRECT
-
-custom_proxy_group=🐟 漏网之鱼`select`[]🌏 地区选择`[]♻️ 自动选择`[]DIRECT`[]👆 手动选择
+custom_proxy_group=Emby 终点站`select`[]DIRECT`[]🇭🇰 深港+香港`[]🇭🇰 香港`[]🇸🇬 狮城`[]🇨🇳 台湾`[🇯🇵 日本`[]🇺🇲 美国`[]♻️ 自动选择`[]🔯 故障转移`[]🔮 负载均衡`[]👆 手动选择
+custom_proxy_group=Jms 卷毛鼠`select`[]DIRECT`[]🇭🇰 深港+香港`[]🇭🇰 香港`[]🇸🇬 狮城`[]🇨🇳 台湾`[🇯🇵 日本`[]🇺🇲 美国`[]♻️ 自动选择`[]🔯 故障转移`[]🔮 负载均衡`[]👆 手动选择
 
 custom_proxy_group=🇭🇰 深港+香港`url-test`(港|HK|Hong Kong)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇭🇰 香港`url-test`(香港)`http://www.gstatic.com/generate_204`300,,50
@@ -113,6 +85,39 @@ custom_proxy_group=🇸🇬 狮城`url-test`(新加坡|坡|狮城|SG|Singapore)`
 custom_proxy_group=🇨🇳 台湾`url-test`(台|新北|彰化|TW|Taiwan)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇯🇵 日本`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇺🇲 美国`url-test`(美国)`http://www.gstatic.com/generate_204`300,,150
+
+custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
+
+custom_proxy_group=🌏 地区GFW选择`select`[]🇭🇰 深港+香港`[]🇭🇰 香港`[]🇸🇬 狮城`[]🇨🇳 台湾`[🇯🇵 日本`[]🇺🇲 美国`[]♻️ 自动选择`[]🔯 故障转移`[]🔮 负载均衡`[]👆 手动选择`[]DIRECT
+
+
+custom_proxy_group=🔯 故障转移`fallback`.*`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🔮 负载均衡`load-balance`.*`http://www.gstatic.com/generate_204`300,,50
+
+custom_proxy_group=bitwarden`select`[]🌏 地区GFW选择`[]♻️ 自动选择`[]🔯 故障转移`[]🔮 负载均衡`[]👆 手动选择`[]DIRECT
+custom_proxy_group=proton`select`[]🌏 地区GFW选择`[]♻️ 自动选择`[]🔯 故障转移`[]🔮 负载均衡`[]👆 手动选择`[]DIRECT
+custom_proxy_group=Spotify`select`[]🇭🇰 深港+香港`[]🇭🇰 香港`[]🇸🇬 狮城`[]🇨🇳 台湾`[🇯🇵 日本`[]🇺🇲 美国`[]♻️ 自动选择`[]🔯 故障转移`[]🔮 负载均衡`[]👆 手动选择`[]DIRECT
+custom_proxy_group=Instagram`select`[]🇭🇰 深港+香港`[]🇭🇰 香港`[]🇸🇬 狮城`[]🇨🇳 台湾`[🇯🇵 日本`[]🇺🇲 美国`[]♻️ 自动选择`[]🔯 故障转移`[]🔮 负载均衡`[]👆 手动选择`[]DIRECT
+
+custom_proxy_group=📲 电报消息`select`[]🌏 地区GFW选择`[]♻️ 自动选择`[]👆 手动选择`[]DIRECT
+custom_proxy_group=🌍📺 国外媒体`select`[]🌏 地区GFW选择`[]♻️ 自动选择`[]👆 手动选择`[]DIRECT
+custom_proxy_group=CN📺 国内媒体`select`[]DIRECT`[]👆 手动选择
+custom_proxy_group=📢 谷歌FCM`select`[]DIRECT`[]🌏 地区GFW选择`[]👆 手动选择
+custom_proxy_group=Ⓜ️ 微软云盘`select`[]DIRECT`[]🌏 地区GFW选择`[]👆 手动选择
+custom_proxy_group=Ⓜ️ 微软服务`select`[]DIRECT`[]🌏 地区GFW选择`[]👆 手动选择
+custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🌏 地区GFW选择`[]👆 手动选择
+custom_proxy_group=🎮 游戏平台`select`[]DIRECT`[]🌏 地区GFW选择`[]👆 手动选择
+custom_proxy_group=🎶 网易音乐`select`[]DIRECT`[]🌏 地区GFW选择`[]♻️ 自动选择`(网易|音乐|解锁|Music|NetEase)
+custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🌏 地区GFW选择`[]♻️ 自动选择
+
+custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
+custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
+custom_proxy_group=🆎 AdBlock`select`[]REJECT`[]DIRECT
+custom_proxy_group=🛡️ 隐私防护`select`[]REJECT`[]DIRECT
+
+custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`[]🌏 地区GFW选择`[]♻️ 自动选择`[]👆 手动选择
+
+
 
 #`[]🇭🇰 深港+香港`[]🇭🇰 香港`[]🇸🇬 狮城`[]🇨🇳 台湾`[🇯🇵 日本`[]🇺🇲 美国
 
