--- a/ClashRules4Single.ini
+++ b/ClashRules4Single.ini
@@ -61,7 +61,7 @@ ruleset=🌏外国GFW,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/C
 ruleset=🐟漏网之鱼,[]FINAL
 ;设置规则标志位
 
-
+#
 
 ###############################################################################################################
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
@@ -79,7 +79,7 @@ custom_proxy_group=👆手动节点`select`.*
 custom_proxy_group=🐟漏网之鱼`select`[]🇭🇰 🚀深港`[]DIRECT`[]REJECT`[]🇭🇰 香港`[]🇸🇬 狮城`[]🇨🇳 台湾`[🇯🇵 日本`[]🇺🇲 美国`[]🌍其它地区
 custom_proxy_group=🎵Spotify🎧`select`[]🇭🇰 🚀深港`[]DIRECT`[]🇭🇰 香港`[]🇸🇬 狮城`[]🇨🇳 台湾`[🇯🇵 日本`[]🇺🇲 美国`[]🌍其它地区
 custom_proxy_group=📷Insta📷`select`[]🇭🇰 🚀深港`[]🇭🇰 香港`[]🇸🇬 狮城`[]🇨🇳 台湾`[🇯🇵 日本`[]🇺🇲 美国`[]🌍其它地区
-custom_proxy_group=🌏📺国外媒体`select`[]🇭🇰 🚀深港`[]DIRECT`[]🇭🇰 香港`[]🇸🇬 狮城`[]🇨🇳 台湾`[🇯🇵 日本`[]🇺🇲 美国`[]🌍其它地区
+custom_proxy_group=🌍📺国外媒体`select`[]🇭🇰 🚀深港`[]DIRECT`[]🇭🇰 香港`[]🇸🇬 狮城`[]🇨🇳 台湾`[🇯🇵 日本`[]🇺🇲 美国`[]🌍其它地区
 
 custom_proxy_group=🎯全球直连`select`[]DIRECT`[]REJECT
 custom_proxy_group=🛡️❌拦截`select`[]REJECT`[]DIRECT
