--- a/ClashRules4Single.ini
+++ b/ClashRules4Single.ini
@@ -1,5 +1,6 @@
 ######################################
 基于 ACL4SSR_Online_Full_AdblockPlus 自定义
+规则顺序自己定，分组完全自定义
 # https://github.com/ACL4SSR/ACL4SSR/blob/master/Clash/config/ACL4SSR_Online_Full_AdblockPlus.ini
 [custom]
 ;不要随意改变关键字，否则会导致出错
