--- a/ClashRules4Single.ini
+++ b/ClashRules4Single.ini
@@ -52,6 +52,7 @@ ruleset=🐭Jms📺,https://raw.githubusercontent.com/zhengxl-a/ClashRules/main/
 ruleset=🌍📺国外媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
 
 
+ruleset=🌏外国GFW,https://raw.githubusercontent.com/zhengxl-a/ClashRules/main/AddedGWF.list
 ruleset=🌏外国GFW,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
 ;bitwarden
 ruleset=🌏外国GFW,https://raw.githubusercontent.com/zhengxl-a/ClashRules/main/bitwarden.list
