--- a/ClashRules4Single.ini
+++ b/ClashRules4Single.ini
@@ -45,9 +45,9 @@ ruleset=🎵Spotify🎧,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master
 
 ruleset=📷Insta📷,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Instagram.list
 
-ruleset=🚆Emby📺,https://raw.githubusercontent.com/zhengxl-a/ClashRules/main/Emby.list
+ruleset=🚆终点站📺,https://raw.githubusercontent.com/zhengxl-a/ClashRules/main/Emby.list
 
-ruleset=🐭Jms📺,https://raw.githubusercontent.com/zhengxl-a/ClashRules/main/Jms.list
+ruleset=🐭卷毛📺,https://raw.githubusercontent.com/zhengxl-a/ClashRules/main/Jms.list
 
 ruleset=🌍📺国外媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
 
@@ -69,6 +69,9 @@ ruleset=🐟漏网之鱼,[]FINAL
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 ;设置分组标志位
 
+custom_proxy_group=🇭🇰 🚀深港`url-test`(港)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇭🇰 香港`url-test`(香港)`http://www.gstatic.com/generate_204`300,,50
+
 custom_proxy_group=🔴📺油管`select`(香港)`(深港)`[]🔴📺油管2
 custom_proxy_group=🔴📺油管2`select`(台湾)`(新加坡)`(日本)
 custom_proxy_group=🚆Emby📺`select`[]DIRECT`.*
@@ -87,8 +90,6 @@ custom_proxy_group=🎯全球直连`select`[]DIRECT`[]REJECT
 custom_proxy_group=🛡️❌拦截`select`[]REJECT`[]DIRECT
 
 
-custom_proxy_group=🇭🇰 🚀深港`url-test`(港)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇭🇰 香港`url-test`(香港)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇸🇬 狮城`url-test`(新加坡)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇨🇳 台湾`url-test`(台|新北)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇯🇵 日本`url-test`(日本)`http://www.gstatic.com/generate_204`300,,50
