更新 ClashRules4Single.ini

--- a/ClashRules4Single.ini
+++ b/ClashRules4Single.ini
@@ -74,8 +74,8 @@ custom_proxy_group=🇭🇰 香港`url-test`(香港)`http://www.gstatic.com/gene
 
 custom_proxy_group=🔴📺油管`select`(香港)`(深港)`[]🔴📺油管2
 custom_proxy_group=🔴📺油管2`select`(台湾)`(新加坡)`(日本)
-custom_proxy_group=🚆Emby📺`select`[]DIRECT`.*
-custom_proxy_group=🐭Jms📺`select`[]DIRECT`.*
+custom_proxy_group=🚆终点站📺`select`[]DIRECT`.*
+custom_proxy_group=🐭卷毛📺`select`[]DIRECT`.*
 custom_proxy_group=🌏外国GFW`select`[]🇭🇰 🚀深港`[]🇭🇰 香港`[]🇸🇬 狮城`[]🇨🇳 台湾`[🇯🇵 日本`[]🇺🇲 美国`[]🌍其它地区
 
 custom_proxy_group=♻️自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
