--- a/ClashRules4Single.ini
+++ b/ClashRules4Single.ini
@@ -82,7 +82,7 @@ custom_proxy_group=♻️自动选择`url-test`.*`http://www.gstatic.com/generat
 custom_proxy_group=👆手动节点`select`.*
 
 custom_proxy_group=🐟漏网之鱼`select`[]🇭🇰 🚀深港`[]DIRECT`[]REJECT`[]🇭🇰 香港`[]🇸🇬 狮城`[]🇨🇳 台湾`[🇯🇵 日本`[]🇺🇲 美国`[]🌍其它地区
-custom_proxy_group=🎵Spotify🎧`select`[]🇭🇰 🚀深港`[]DIRECT`[]🇭🇰 香港`[]🇸🇬 狮城`[]🇨🇳 台湾`[🇯🇵 日本`[]🇺🇲 美国`[]🌍其它地区
+custom_proxy_group=🎵Spotify🎧`select`[]DIRECT`(韩国|英国|阿根廷|土耳其|印度|菲律宾)`[]🇭🇰 🚀深港`[]🇭🇰 香港`[]🇸🇬 狮城`[]🇨🇳 台湾`[🇯🇵 日本`[]🇺🇲 美国`[]🌍其它地区
 custom_proxy_group=📷Insta📷`select`[]🇭🇰 🚀深港`[]🇭🇰 香港`[]🇸🇬 狮城`[]🇨🇳 台湾`[🇯🇵 日本`[]🇺🇲 美国`[]🌍其它地区
 custom_proxy_group=🌍📺国外媒体`select`[]🇭🇰 🚀深港`[]DIRECT`[]🇭🇰 香港`[]🇸🇬 狮城`[]🇨🇳 台湾`[🇯🇵 日本`[]🇺🇲 美国`[]🌍其它地区
 
