--- a/ClashRules4Single.ini
+++ b/ClashRules4Single.ini
@@ -17,6 +17,9 @@ ruleset=🛡️❌拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/maste
 ruleset=🛡️❌拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyListChina.list
 ruleset=🛡️❌拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyPrivacy.list
 
+ruleset=🤖ChatGPT,https://raw.githubusercontent.com/zhengxl-a/ClashRules/main/ChatGPT.list
+
+
 ##国内媒体
 ruleset=🎯全球直连 ,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
 
@@ -72,19 +75,21 @@ ruleset=🐟漏网之鱼,[]FINAL
 custom_proxy_group=🇭🇰 🚀深港`url-test`(港)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇭🇰 香港`url-test`(香港)`http://www.gstatic.com/generate_204`300,,50
 
+custom_proxy_group=🤖ChatGPT`select`[]🇭🇰 🚀深港`[]🇭🇰 香港`[]🇸🇬 狮城`[]🇨🇳 台湾`[]🇯🇵 日本`[]🇺🇲 美国`(韩国|英国|阿根廷|土耳其|印度|菲律宾)
+
 custom_proxy_group=🔴📺油管`select`(香港)`(深港)`[]🔴📺油管2
 custom_proxy_group=🔴📺油管2`select`(台湾)`(新加坡)`(日本)
 custom_proxy_group=🚆终点站📺`select`[]DIRECT`.*
 custom_proxy_group=🐭卷毛📺`select`[]DIRECT`.*
-custom_proxy_group=🌏外国GFW`select`[]🇭🇰 🚀深港`[]🇭🇰 香港`[]🇸🇬 狮城`[]🇨🇳 台湾`[🇯🇵 日本`[]🇺🇲 美国`[]🌍其它地区
+custom_proxy_group=🌏外国GFW`select`[]🇭🇰 🚀深港`[]🇭🇰 香港`[]🇸🇬 狮城`[]🇨🇳 台湾`[]🇯🇵 日本`[]🇺🇲 美国`[]🌍其它地区
 
 custom_proxy_group=♻️自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=👆手动节点`select`.*
 
-custom_proxy_group=🐟漏网之鱼`select`[]🇭🇰 🚀深港`[]DIRECT`[]REJECT`[]🇭🇰 香港`[]🇸🇬 狮城`[]🇨🇳 台湾`[🇯🇵 日本`[]🇺🇲 美国`[]🌍其它地区
-custom_proxy_group=🎵Spotify🎧`select`[]DIRECT`(韩国|英国|阿根廷|土耳其|印度|菲律宾)`[]🇭🇰 🚀深港`[]🇭🇰 香港`[]🇸🇬 狮城`[]🇨🇳 台湾`[🇯🇵 日本`[]🇺🇲 美国`[]🌍其它地区
-custom_proxy_group=📷Insta📷`select`[]🇭🇰 🚀深港`[]🇭🇰 香港`[]🇸🇬 狮城`[]🇨🇳 台湾`[🇯🇵 日本`[]🇺🇲 美国`[]🌍其它地区
-custom_proxy_group=🌍📺国外媒体`select`[]🇭🇰 🚀深港`[]DIRECT`[]🇭🇰 香港`[]🇸🇬 狮城`[]🇨🇳 台湾`[🇯🇵 日本`[]🇺🇲 美国`[]🌍其它地区
+custom_proxy_group=🐟漏网之鱼`select`[]🇭🇰 🚀深港`[]DIRECT`[]REJECT`[]🇭🇰 香港`[]🇸🇬 狮城`[]🇨🇳 台湾`[]🇯🇵 日本`[]🇺🇲 美国`[]🌍其它地区
+custom_proxy_group=🎵Spotify🎧`select`[]DIRECT`(韩国|英国|阿根廷|土耳其|印度|菲律宾)`[]🇭🇰 🚀深港`[]🇭🇰 香港`[]🇸🇬 狮城`[]🇨🇳 台湾`[]🇯🇵 日本`[]🇺🇲 美国`[]🌍其它地区
+custom_proxy_group=📷Insta📷`select`[]🇭🇰 🚀深港`[]🇭🇰 香港`[]🇸🇬 狮城`[]🇨🇳 台湾`[]🇯🇵 日本`[]🇺🇲 美国`[]🌍其它地区
+custom_proxy_group=🌍📺国外媒体`select`[]🇭🇰 🚀深港`[]DIRECT`[]🇭🇰 香港`[]🇸🇬 狮城`[]🇨🇳 台湾`[]🇯🇵 日本`[]🇺🇲 美国`[]🌍其它地区
 
 custom_proxy_group=🎯全球直连`select`[]DIRECT`[]REJECT
 custom_proxy_group=🛡️❌拦截`select`[]REJECT`[]DIRECT
@@ -96,7 +101,7 @@ custom_proxy_group=🇯🇵 日本`url-test`(日本)`http://www.gstatic.com/gene
 custom_proxy_group=🇺🇲 美国`url-test`(美国)`http://www.gstatic.com/generate_204`300,,150
 custom_proxy_group=🌍其它地区`select`(韩国|英国|阿根廷|土耳其|印度|菲律宾)
 
-#`[]🇭🇰 🚀深港`[]🇭🇰 香港`[]🇸🇬 狮城`[]🇨🇳 台湾`[🇯🇵 日本`[]🇺🇲 美国`[]🌍其它地区
+#`[]🇭🇰 🚀深港`[]🇭🇰 香港`[]🇸🇬 狮城`[]🇨🇳 台湾`[]🇯🇵 日本`[]🇺🇲 美国`[]🌍其它地区
 
 ;设置分组标志位
 
