--- a/ClashRules4Single.ini
+++ b/ClashRules4Single.ini
@@ -75,7 +75,7 @@ ruleset=🐟漏网之鱼,[]FINAL
 custom_proxy_group=🇭🇰 🚀深港`url-test`(港)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇭🇰 香港`url-test`(香港)`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🤖ChatGPT`select`[]🇭🇰 🚀深港`[]🇭🇰 香港`[]🇸🇬 狮城`[]🇨🇳 台湾`[]🇯🇵 日本`[]🇺🇲 美国`(韩国|英国|阿根廷|土耳其|印度|菲律宾)
+custom_proxy_group=🤖ChatGPT`select`[]DIRECT`[]🇭🇰 🚀深港`[]🇭🇰 香港`[]🇸🇬 狮城`[]🇨🇳 台湾`[]🇯🇵 日本`[]🇺🇲 美国`(韩国|英国|阿根廷|土耳其|印度|菲律宾)
 
 custom_proxy_group=🔴📺油管`select`(香港)`(深港)`[]🔴📺油管2
 custom_proxy_group=🔴📺油管2`select`(台湾)`(新加坡)`(日本)
